# CarReco

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/routes/: recommendations.py
app/data/: __init__.py  car_catalog.py
app/schemas/: catalog.py  explanation.py  filtering.py  follow_up.py  monitoring.py  normalization.py  orchestration.py  recommendation.py  relaxation.py  scoring.py  validation.py
app/services/: candidate_filtering.py  car_catalog.py  constraint_relaxation.py  explanation_generation.py  follow_up_questions.py  input_validation.py  logging_monitoring.py  preference_normalization.py  recommendation_orchestrator.py  response_formatter.py  scoring_ranking.py
docs/: architechture.md  linkedin-topics.md  spec.md
